# PCAM-

./: .gitignore  Cargo.toml  README.md  antigravity.py  benchmark.py  harness.py  hidden_tests.py  mock_test.py  my_rust_agent.py  pyproject.toml  self_check.py  test_anisotropy.py  test_chimera.py  test_fog.py
.specify/: init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: agy.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
adapters/: myteam.py
src/: lib.rs  main.rs  model_params.json
src/pcam/: dynamics.rs  math.rs  mod.rs  optimize.rs  sparse_energy.rs
