[package]
name = "antigravity"
version = "0.1.0"
edition = "2021"

[lib]
name = "antigravity"
crate-type = ["cdylib", "lib"]

[features]
default = []
python = ["pyo3"]

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ndarray = "0.15"
ndarray-rand = "0.14"
nalgebra = "0.33"
rand = "0.8"
rand_distr = "0.4"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
